--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -21,7 +21,27 @@
         box-shadow: 5px 5px 10px rgba(0, 0, 0, .25);
         padding: 15px;
         cursor: pointer;
-        transition: 0.3s transform;
+        transition: transform 0.3s;
+        &-enter {
+            opacity: 0;
+            &-active {
+                opacity: 1;
+                transition: opacity 0.5s ease-in;
+
+            }
+            &-done {
+                opacity: 1;
+                transition: opacity 0.5s;
+            }
+        }
+        &-exit {
+            opacity: 1;
+            &-active {
+                opacity: 0;
+                transition: opacity 500ms ease-in;
+            }
+
+        } 
         img {
             width: 200px;
             height: 200px;
@@ -32,6 +52,10 @@
             box-shadow: 0 5px 20px $main-color;
             transform: translateY(-8px);
         }
+
+
+
+
     }
     &__name {
         font-weight: bold;
