--- a/src/components/appBanner/appBanner.scss
+++ b/src/components/appBanner/appBanner.scss
@@ -1,4 +1,5 @@
 @import '../../style/variables.scss';
+@import '../../style/mixins.scss';
 
 .app {
     &__banner {
@@ -8,6 +9,26 @@
         padding: 0 25px 0 45px;
         display: grid;
         grid-template-columns: 152px auto 133px;
+        @include max-w(769){
+            justify-items: center;
+            align-items: center;
+        }
+        @include max-w(550) {
+            padding: 0 10px 0 10px;
+            grid-template-columns: 110px auto 133px;
+            justify-items: center;
+            align-items: center;
+        }
+        &__img-avengers {
+            @include max-w(550) {
+                width: 100px;
+            }
+        }
+        &__img-logo{
+            @include max-w(550) {
+                width: 100px;
+            }
+        }
         &-text {
             font-weight: bold;
             font-size: 24px;
@@ -15,6 +36,19 @@
             color: #FFFFFF;
             padding-left: 83px;
             padding-top: 18px;
+            @include max-w(769) {
+                font-size: 20px;
+                line-height: 21px;
+                padding: 5px 0 0 5px;
+                text-align: center;
+            }
+
+            @include max-w(550) {
+                font-size: 15px;
+                line-height: 16px;
+                padding: 5px 0 0 5px;
+                text-align: center;
+            }
         }
     }
 }
