--- a/src/components/appHeader/appHeader.scss
+++ b/src/components/appHeader/appHeader.scss
@@ -1,5 +1,5 @@
 @import '../../style/variables.scss';
-
+@import '../../style/mixins.scss';
 .app {
     &__header {
         display: flex;
@@ -9,6 +9,10 @@
         font-weight: bold;
         font-size: 28px;
         line-height: 37px;
+        @include max-w(769) {
+            font-size: 20px;
+            line-height: 20px;
+        }
         span {
             color: $main-color;
         }
@@ -20,6 +24,10 @@
             font-weight: bold;
             font-size: 24px;
             line-height: 32px;
+            @include max-w(769) {
+                font-size: 20px;
+                line-height: 20px;
+            }
             li {
                 margin: 0 8px;
                 a:hover {
