--- a/src/components/charSearchForm/charSearchForm.scss
+++ b/src/components/charSearchForm/charSearchForm.scss
@@ -1,4 +1,5 @@
 @import '../../style/variables.scss';
+@import '../../style/mixins.scss';
 
 .char {
     &__search {
@@ -9,6 +10,10 @@
             position: relative;
             z-index: 5;
             background-color: #fff;
+            @include max-w(769) {
+                padding: 15px;
+                margin-top: 10px;
+            }
         }
         &-label {
             display: block;
@@ -20,8 +25,12 @@
         &-wrapper {
             margin-top: 15px;
             display: flex;
-            justify-content: space-between;
             align-items: center;
+            column-gap: 12px;
+            @include max-w(550) {
+                flex-direction: column;
+                row-gap: 15px;
+            }
             input {
                 padding: 0 10px;
                 width: 250px;
@@ -30,6 +39,11 @@
                 background: #FFFFFF;
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 font-size: 14px;
+
+                @include max-w(550) {
+                    width: 100%;
+                    height: 30px;
+                }
             }
         }
         &-error {
