--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -1,95 +1,46 @@
 @import './variables';
+@import './mixins.scss';
+
 
 .button {
-    min-width: 101px;
-    color: #fff;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 14px;
-    transition: 0.3s transform;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    &__long {
-        display: block;
-        width: 170px;
-        margin: 45px auto 0 auto;
-    }
-    .inner {
-        position: relative;
-        background-color: $main-color;
-        line-height: 18px;
-        padding: 0 18px;
-        transition: none;
-        &::before {
-            border-color: $main-color transparent;
-            border-style: solid;
-            border-width: 0 0 10px 10px;
-            content: "";
-            display: block;
-            position: absolute;
-            left: 0;
-            top: -10px;
-            transition: none;
+        min-width: 110px;
+        height: 38px;
+        text-align: center;
+        line-height: 38px;
+        clip-path: polygon(15% 0, 100% 0, 100% 55%, 85% 100%, 0 100%, 0 45%);
+        text-transform: uppercase;
+        border: none;
+        outline: none;
+        margin: 0;
+        transition: 0.3s transform;
+        color: #fff;
+        font-size: 14px;
+        cursor: pointer;
+
+        &:disabled {
+            filter: grayscale(.7);
         }
-        &::after {
-            border-color: $main-color transparent;
-            border-style: solid;
-            border-width: 0 0 10px 10px;
-            content: "";
-            display: block;
-            position: absolute;
-            right: 0;
-            bottom: -10px;
-            transform: rotate(180deg);
-            transition: none;
-        }
-    }
-    &__main, &__secondary {
         &:hover {
-            color: #fff;
+            transform: translateY(-5px);
         }
-    }
-    &__secondary {
-        .inner {
+        &__main {
+            background-color: $main-color;
+        }
+
+        &__secondary {
             background-color: $grey;
-            &::before {
-                border-color: $grey transparent;
-                transition: none;
-            }
-            &::after {
-                border-color: $grey transparent; 
-                transition: none;
+        }
+        &__long {
+            min-width: 180px;
+            margin: 20px auto 0 auto;
+            @include max-w(550)  {
+                min-width: 110px;
             }
         }
-    }
-    &::before {
-        content: '';
-        display: block;
-        height: 10px;
-        margin-left: 10px;
-        transition: none;
-
-    }
-    &::after {
-        content: '';
-        display: block;
-        height: 10px;
-        margin-right: 10px;
-        transition: none;
-
-    }
-    &.button__main::before, &.button__main::after {
-        background-color: $main-color;
-    }
-    &.button__secondary::before, &.button__secondary::after {
-        background-color: $grey;
-    }
-    &:hover {
-        transform: translateY(-5px);
-    }
-
-    &:disabled {
-        filter: grayscale(.7);
-    }
+        &__small {
+            min-width: 50px;
+            height: 25px;
+            line-height: 25px;
+            font-size: 12px;
+        }
 }
