--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,7 @@
 @import './variables';
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 @import './button';
+@import './mixins.scss';
 
 * {
     font-family: "Roboto Condensed", sans-serif;
@@ -48,10 +49,14 @@ input::-webkit-inner-spin-button {
 }
 
 .app {
-    width: 1100px;
+    max-width: 1100px;
     margin: 0 auto;
-    padding: 50px 0 50px 0;
+    padding: 50px 10px 50px 10px;
     position: relative;
+    @include max-w(1200) {
+        max-width: 1000px;
+    }
+
     .bg-decoration {
         position: absolute;
         right: -174px;
@@ -63,6 +68,9 @@ input::-webkit-inner-spin-button {
 main {
     margin-top: 50px;
     position: relative;
+    @include max-w(550) {
+        margin-top: 20px;
+    }
 }
 
 .pulse {
